<resources>
    <string name="app_name">MoveToPlay</string>
    <string name="loading">Загрузка…</string>
    <string name="sign_in_via_google">Войти через Google</string>
    <string name="registration">Регистрация</string>
    <string name="no_have_account">нет аккаунта</string>
    <string name="sign_in_via_mail">Войти по эл. почте</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторение пароля</string>
    <string name="sing_up">Зарегистрироваться</string>
    <string name="i_accept">Я принимаю</string>
    <string name="required">Required</string>
    <string name="privacy_policy">политику конфиденциальности</string>
    <string name="child_phone">Устройство ребенка</string>
    <string name="log_in">Вход</string>
    <string name="age">Ваш возраст</string>
    <string name="sign_in">Войти</string>
    <string name="сontinue">Продолжить</string>
    <string name="forgot_password">забыли пароль?</string>
    <string name="restore_password">Восстановить пароль</string>
    <string name="change_password">Смена пароля</string>
    <string name="confirm">Подтвердить</string>
    <string name="save">Сохранить</string>
    <string name="input_email">* Введите эл. почту к который был привязан Ваш аккаунт, на неё прийдёт письмо с кодом подтверждения</string>
    <string name="an_email_with_confirmation_code">* На указанную почту было отправлено письмо с кодом подтверждения, введите его, чтобы продолжить</string>
    <string name="new_password">Новый пароль</string>
    <string name="available_for_day">Доступно на день</string>
    <string name="remainder">осталось</string>
    <string name="exercises_performed_on_day">Выполнено упражнений за день</string>
    <string name="perform_exercise">Выполнить упражнение</string>
    <string name="my_achievements">Мои достижения</string>
    <string name="exercises_performed">Выполнено упражнений</string>
    <string name="select_type_exercise">Выберите вид упражнения</string>
    <string name="stop">Остановить</string>
    <string name="wrong_email">Неправильная эл. почта</string>
    <string name="password_must_be_greater_than_five_chars">Пароль должен быть больше 5 символов</string>
    <string name="no_user_found">Пользователь не найден</string>
    <string name="such_user_is_registered">Такой пользователь зарегистрирован</string>
    <string name="choose_child_profile">Выберите профиль ребенка</string>
    <string name="create_new">Создать новый</string>
    <string name="import_old">Импортировать старый</string>
    <string name="child_name">Имя ребенка</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="does_your_child_play_sports">Занимается ли ребенок спортом?</string>
    <string name="jumps">Прыжки</string>
    <string name="squats">Приседания</string>
    <string name="pushups">Отжимания</string>
    <string name="parental_age">Возраст родителя</string>
    <string name="connection_error">Ошибка соединения</string>
    <string name="java_entry_title" translatable="false">Run the ML Kit quickstart written in Java</string>
    <string name="kotlin_entry_title" translatable="false">Run the ML Kit quickstart written in Kotlin</string>
    <string name="ok" translatable="false">OK</string>
    <string name="permission_camera_rationale" translatable="false">Access to the camera is needed for detection</string>
    <string name="no_camera_permission" translatable="false">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error" translatable="false">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="toggle_turn_on" translatable="false">Front</string>
    <string name="toggle_turn_off" translatable="false">Back</string>
    <string name="desc_camera_source_activity" translatable="false">Vision detectors demo with live camera preview</string>
    <string name="desc_still_image_activity" translatable="false">Vision detectors demo with a still image</string>
    <string name="desc_camerax_live_preview_activity" translatable="false">Vision detectors demo with live preview using CameraX. Note that CameraX is only supported on API 21+</string>
    <string name="desc_cameraxsource_demo_activity" translatable="false">Object detection with custom classifier using ML Kit CameraXSource API. Note that CameraX is only supported on API 21+</string>
    <string name="download_error" translatable="false">Download error</string>
    <string name="start_over" translatable="false">Start over</string>
    <string name="menu_item_settings" translatable="false">Settings</string>
    <string name="select_image" translatable="false">Select image</string>
    <string name="custom_object_detection" translatable="false">Custom Object Detector</string>
    <string name="pref_screen" translatable="false">ps</string>
    <string name="pref_screen_title_live_preview" translatable="false">Live preview settings</string>
    <string name="pref_screen_title_still_image" translatable="false">Still image settings</string>
    <string name="pref_screen_title_camerax_live_preview" translatable="false">CameraX live preview settings</string>
    <string name="pref_screen_title_cameraxsource_demo" translatable="false">CameraXSource live preview settings</string>
    <string name="pref_category_info" translatable="false">Detection Info</string>
    <string name="pref_category_face_detection" translatable="false">Face Detection</string>
    <string name="pref_category_object_detection" translatable="false">Object Detection / Custom Object Detection</string>
    <string name="pref_category_automl" translatable="false">AutoML Image Labeling</string>
    <string name="pref_category_pose_detection" translatable="false">Pose Detection</string>
    <string name="pref_category_segmentation" translatable="false">Selfie Segmentation</string>
    <string name="pref_category_text_recognition" translatable="false">Text Recognition</string>
    <string name="pref_category_key_camera" translatable="false">pckc</string>
    <string name="pref_category_title_camera" translatable="false">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_camerax_rear_camera_target_resolution" translatable="false">crctas</string>
    <string name="pref_key_camerax_front_camera_target_resolution" translatable="false">cfctas</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="pref_title_rear_camera_preview_size" translatable="false">Rear camera preview size</string>
    <string name="pref_title_front_camera_preview_size" translatable="false">Front camera preview size</string>
    <string name="pref_title_camerax_rear_camera_target_resolution" translatable="false">CameraX rear camera target resolution</string>
    <string name="pref_title_camerax_front_camera_target_resolution" translatable="false">CameraX front camera target resolution</string>
    <string name="pref_title_camera_live_viewport" translatable="false">Enable live viewport</string>
    <string name="pref_summary_camera_live_viewport" translatable="false">Do not block camera preview drawing on detection</string>
    <string name="pref_title_info_hide" translatable="false">Hide detection info</string>
    <string name="pref_key_info_hide" translatable="false">ih</string>
    <string name="pref_title_group_recognized_text_in_blocks" translatable="false">Group recognized text in paragraphs</string>
    <string name="pref_key_group_recognized_text_in_blocks" translatable="false">grtib</string>
    <string name="pref_title_show_language_tag" translatable="false">Show language identified</string>
    <string name="pref_key_show_language_tag" translatable="false">slt</string>
    <string name="pref_title_object_detector_enable_multiple_objects" translatable="false">Enable multiple objects</string>
    <string name="pref_key_live_preview_object_detector_enable_multiple_objects" translatable="false">lpodemo</string>
    <string name="pref_key_still_image_object_detector_enable_multiple_objects" translatable="false">siodemo</string>
    <string name="pref_title_object_detector_enable_classification" translatable="false">Enable classification</string>
    <string name="pref_key_live_preview_object_detector_enable_classification" translatable="false">lpodec</string>
    <string name="pref_key_still_image_object_detector_enable_classification" translatable="false">siodec</string>
    <string name="pref_title_face_detector_landmark_mode" translatable="false">Landmark mode</string>
    <string name="pref_key_live_preview_face_detection_landmark_mode" translatable="false">lpfdlm</string>
    <string name="pref_entries_face_detector_landmark_mode_no_landmarks" translatable="false">No landmarks</string>
    <string name="pref_entries_face_detector_landmark_mode_all_landmarks" translatable="false">All landmarks</string>
    <string name="pref_entry_values_face_detector_landmark_mode_no_landmarks" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_landmark_mode_all_landmarks" translatable="false">2</string>
    <string name="pref_title_face_detector_contour_mode" translatable="false">Contour mode</string>
    <string name="pref_key_live_preview_face_detection_contour_mode" translatable="false">lpfdcm</string>
    <string name="pref_entries_face_detector_contour_mode_no_contours" translatable="false">No contours</string>
    <string name="pref_entries_face_detector_contour_mode_all_contours" translatable="false">All contours</string>
    <string name="pref_entry_values_face_detector_contour_mode_no_contours" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_contour_mode_all_contours" translatable="false">2</string>
    <string name="pref_title_face_detector_classification_mode" translatable="false">Classification mode</string>
    <string name="pref_key_live_preview_face_detection_classification_mode" translatable="false">lpfdcfm</string>
    <string name="pref_entries_face_detector_classification_mode_no_classifications" translatable="false">No classifications</string>
    <string name="pref_entries_face_detector_classification_mode_all_classifications" translatable="false">All classifications</string>
    <string name="pref_entry_values_face_detector_classification_mode_no_classifications" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_classification_mode_all_classifications" translatable="false">2</string>
    <string name="pref_title_face_detector_performance_mode" translatable="false">Performance mode</string>
    <string name="pref_key_live_preview_face_detection_performance_mode" translatable="false">lpfdpm</string>
    <string name="setup_profile_title">Выберите профиль ребенка</string>
    <string name="setup_profile_name">Имя ребенка</string>
    <string name="setup_profile_age">Возраст</string>
    <string name="setup_profile_check_sport">Занимается ли ребенок \nспортом?</string>
    <string name="setup_profile_continue">Продолжить</string>
    <string name="enter">Вход</string>
    <string name="child_device">Устройство ребенка</string>
    <string name="enter_now">Войти</string>
    <string name="todo">TODO</string>
    <string name="what_apps_block">Какие приложения хотите ограничить?</string>
    <string name="daily_limit">Дневной лимит</string>
    <string name="finish">Завершить</string>
    <string name="parent_device">Устройство родителя</string>
</resources>