<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_rounded"
    android:padding="24dp"
    android:layout_margin="4dp" >
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/radio_group">

        <RadioButton
            android:id="@+id/rb_parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parent_device"
            android:layout_marginBottom="4dp"
            android:checked="true"
            android:textSize="18sp"
            android:textColor="@color/main_value"
            android:buttonTint="@color/main_value"/>

        <RadioButton
            android:id="@+id/rb_child"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/child_device"
            android:layout_marginTop="4dp"
            android:textSize="18sp"
            android:textColor="@color/main_value"
            android:buttonTint="@color/main_value"/>

    </RadioGroup>

    <Button
        android:id="@+id/btn_enter_like"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn_bg_colored"
        android:text="@string/enter_now"
        android:textAllCaps="false"
        android:textColor="@color/ic_launcher_background"
        android:textSize="20sp"
        android:textStyle="bold"/>

</LinearLayout>