<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="38dp"
    tools:context=".screens.create_child_profile.SetupProfileActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/rv_child_list"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/sp_status"
        app:layout_constraintBottom_toTopOf="@id/btn_continue"
        android:layout_marginVertical="20dp"/>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="311dp"
        android:background="@drawable/btn_bg_colored"
        android:text="@string/setup_profile_continue"
        android:textAllCaps="false"
        android:textColor="@color/ic_launcher_background"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_sport" />

    <CheckBox
        android:id="@+id/check_sport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:buttonTint="@color/main_value"
        android:paddingStart="8dp"
        android:text="@string/setup_profile_check_sport"
        android:textColor="#21A8F4"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/btn_continue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_child_age"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_child_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_child_profile"
        android:hint="@string/setup_profile_name"
        android:padding="10dp"
        android:textColor="@color/main_value"
        android:textColorHint="@color/main_value"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/sp_child_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sp_status" />

    <EditText
        android:id="@+id/et_child_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints="name"
        android:background="@drawable/bg_child_profile"
        android:hint="@string/setup_profile_age"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@color/main_value"
        android:textColorHint="@color/main_value"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sp_child_gender"
        app:layout_constraintBottom_toTopOf="@id/check_sport"/>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/pb_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/main_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_continue" />

    <Spinner
        android:id="@+id/sp_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_child_profile"
        android:padding="6dp"
        android:spinnerMode="dropdown"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile"
        tools:listitem="@layout/spin_status_item" />

    <Spinner
        android:id="@+id/sp_child_gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_child_profile"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_child_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_child_name"
        tools:listitem="@layout/spin_gender_item" />

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/setup_profile_title"
        android:textColor="@color/main_value"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>