<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".screens.applock.LimitationAppActivity">

    <ProgressBar
        android:id="@+id/pb_limitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/main_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_limitations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/what_apps_block"
        android:textColor="@color/main_value"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_daily_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:paddingVertical="12dp"
        android:text="@string/daily_limit"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_limitations" />

    <TextView
        android:id="@+id/tv_set_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:paddingVertical="12dp"
        android:text="Установить пин"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_daily_limit" />


    <ImageView
        android:id="@+id/img_time_settings"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_baseline_settings_24"
        app:layout_constraintBottom_toTopOf="@id/just_separation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/just_separation2" />

    <ImageView
        android:id="@+id/img_set_pin"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_baseline_fiber_pin_24"
        app:layout_constraintBottom_toTopOf="@id/just_separation3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/just_separation" />


    <View
        android:id="@+id/just_separation"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ccc"
        app:layout_constraintTop_toBottomOf="@id/tv_daily_limit" />

    <View
        android:id="@+id/just_separation2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ccc"
        app:layout_constraintTop_toTopOf="@id/tv_daily_limit" />

    <View
        android:id="@+id/just_separation3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ccc"
        app:layout_constraintBottom_toBottomOf="@id/tv_set_pin" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="ifContentScrolls"
        app:layout_constraintBottom_toTopOf="@id/btn_finish"
        app:layout_constraintTop_toBottomOf="@id/tv_set_pin">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_limitations"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/limitations_item"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </androidx.core.widget.NestedScrollView>


    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_value"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view_focus"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>